// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display magic 1`] = `
<header
  className=""
>
  <span
    className="name-left"
  />
  <div
    className="item-name type-line"
  >
    <span>
      Buzzing 
      <span>
        Blinder
      </span>
       of Mastery
    </span>
  </div>
  <span
    className="name-right"
  />
</header>
`;

exports[`should display normal 1`] = `
<header
  className=""
>
  <span
    className="name-left"
  />
  <div
    className="item-name type-line"
  >
    <span>
      Full Scale Armour
    </span>
  </div>
  <span
    className="name-right"
  />
</header>
`;

exports[`should display rare 1`] = `
<header
  className="double-line"
>
  <span
    className="name-left"
  />
  <div
    className="item-name"
  >
    Gale Salvation
  </div>
  <div
    className="item-name type-line"
  >
    <span>
      Vaal Regalia
    </span>
  </div>
  <span
    className="name-right"
  />
</header>
`;
